--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,14 @@
 version:  '3.6'
 
-services: 
+services:  
+
+ # Redis database 
+
+  redis:
+    image: redis
+    ports:
+      - "6379:6379"
+
 
   # PostgresSQL
   postgres:
@@ -18,7 +26,7 @@ services:
   # Backend API
   smart-brain-api:
     container_name: backend
-    build: ./
+    build: ./ 
     volumes:
       - ./:/user/src/smart-brain-api 
     command: npm start 
@@ -27,8 +35,10 @@ services:
       - "3000:3000"
     environment: 
       POSTGRES_URI: postgres://admin:password@postgres:5432/smart-brain-docker
-  #  links:
-   #   - postgres
+      Redis_URI: redis://redis:6379
+    links:
+      - postgres
+      - redis
    
   
   
